--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
       canvas{
         width: 100%;
         height: 100%;
-        background-color: #bbb;
+        background-color: #FFF;
+        border: 2px dotted black;
+        border-radius: 1rem;
       }
       
     </style>
@@ -107,7 +109,7 @@
       </div>
     </div>
 
-    <div id="canvasWrapper" style="">
+    <div id="canvasWrapper">
       <canvas id="myChart"></canvas>
     </div>
 
